# licensing-system

./: .gitignore  .pylintrc  README.md  pyproject.toml
app/: database.py  encryption.py  main.py
client/: main.py
