[project]
name = "licensing-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Bittu Kumar",email = "bitweb24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
